Added the About Me page

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,14 @@
 		<title>Julian Insua :: portfolio</title>
 
 		<!--FONTS-->
-		<!--ProstoOne-->
-		<link
-			href="https://fonts.googleapis.com/css2?family=Prosto+One&display=swap"
-			rel="stylesheet"
-		/>
+		<!--ProstoOne & PT Serif Caption-->
 		<link
 			href="https://fonts.googleapis.com/css2?family=PT+Serif+Caption&family=Prosto+One&display=swap"
+			rel="stylesheet"
+		/>
+		<!--PT Mono-->
+		<link
+			href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
